--- a/index.html
+++ b/index.html
@@ -19,37 +19,53 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="vatsimipboardauth" class="anchor" href="#vatsimipboardauth" aria-hidden="true"><span class="octicon octicon-link"></span></a>VatsimIPBoardAuth</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h1></h1>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>Anthony Lawrence <a href="mailto:freelancer@anthonylawrence.me.uk">freelancer@anthonylawrence.me.uk</a></p>
+
+<p>An IPBoard 4 login handler for Cert's SSO.  For IPBoard 3.4.x, look in the other branch. This does <em>not</em> modify logins to the admin area.</p>
+
+<h2>
+<a id="some-important-notes-for-those-adding-this-to-an-existing-board" class="anchor" href="#some-important-notes-for-those-adding-this-to-an-existing-board" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Important Notes (For those adding this to an existing board)</h2>
+
+<p>The installation steps below work on the premise that this is a <em>fresh</em> installation of IPBoard.  If you wish to introduce this to an <em>existing</em> V4 board, then there are some additional steps.</p>
+
+<p>AFTER you've completed the installation, you should populate the vatsim_cid field with the current CID's of your membership <em>if you have them</em>.
+If you do not have this data, the best suggestion would be for members to be treated as "new members" and then have administrators merge those accounts when people request it.</p>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<ul>
+<li>Take a backup.  Please!</li>
+<li>Clone this repository somewhere.</li>
+<li>Run git submodule update --init --recursive to download the demo code.</li>
+<li>Copy all files into system/Login</li>
+<li>Run the following MySQL Commands to add this login handler to your installation, add a vatsim_cid field to the members table and then adds some needed entries to your languages table (English only). <em><em>make sure that you edit the queries to match your IPBoard prefix if it isn't default</em></em>.</li>
+</ul>
+
+<pre><code>INSERT INTO `ibf_core_login_handlers` (`login_key`, `login_settings`, `login_order`, `login_acp`, `login_enabled`) VALUES ('Vatsim', '{"sso_base":null,"sso_key":null,"sso_secret":null,"sso_rsa_key":null}', '1', '0', '1');
+ALTER TABLE `ibf_core_members` ADD `vatsim_cid` INT(7) UNSIGNED NULL AFTER `member_id`;
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_handler_Vatsim', 'VATSIM SSO Login', NULL, '100031', NULL, '0', '1', NULL, NULL);
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_vatsim_sso_base', 'VATSIM SSO Base URL', NULL, '100031', NULL, '0', '1', NULL, NULL);
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_vatsim_sso_key', 'Your SSO Key', NULL, '100031', NULL, '0', '1', NULL, NULL);
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_vatsim_sso_secret', 'Your SSO Secret', NULL, '100031', NULL, '0', '1', NULL, NULL);
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_vatsim_sso_rsa_key', 'Your RSA Key', NULL, '100031', NULL, '0', '1', NULL, NULL);
+INSERT INTO `ibf_core_sys_lang_words` (`word_id`, `lang_id`, `word_app`, `word_key`, `word_default`, `word_custom`, `word_default_version`, `word_custom_version`, `word_js`, `word_export`, `word_plugin`, `word_theme`) VALUES (NULL, '1', 'core', 'login_vatsim_cancelled', 'You cancelled your login.', NULL, '100031', NULL, '0', '1', NULL, NULL);
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Login to your Admin Control Panel, visit System &gt; Settings &gt; Login Handlers</li>
+<li>Edit the Vatsim Login Handler and complete the form with the details requested.  You can get these from the VATSIM SSO website once you've registered as an SSO consumer.</li>
+<li>Visit Customisation &gt; Themes and click "Edit HTML/CSS" for the default theme (you'll have to figure out these steps for any custom/purchased templates)</li>
+<li>Locate loginPopup in the global section and modify it to match: <a href="https://gist.github.com/A-Lawrence/d0fe1ffcf13c15e1926d">https://gist.github.com/A-Lawrence/d0fe1ffcf13c15e1926d</a> (What we're achiving here is disabling the normal login for users)</li>
+<li>Locate login in the system section and modify it to match: <a href="https://gist.github.com/A-Lawrence/135238e6aff855fcb571">https://gist.github.com/A-Lawrence/135238e6aff855fcb571</a> (We're also disabling normal login from the standard login screen)</li>
+<li>Save those templates (your forum may lose it's styling momentarily whils the style caches are rebuilt)</li>
+<li>That's it! Go and use it.</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/A-Lawrence/VatsimIPBoardAuth">Vatsimipboardauth</a> is maintained by <a href="https://github.com/A-Lawrence">A-Lawrence</a>.</span>
